# Graphessor

./: .doxygen_config  .gitignore  CMakeLists.txt  README.md  example.cpp  graph.sh  hello_world.cpp  notes.txt  requirements.txt  runGraphessor.sh  runTests.sh  test_graph.txt
docs/: create_docs.sh
docs/logic/Rivara/: graphRivaraP0.dot
src/executable/: CMakeLists.txt  main.cpp
src/io/: CMakeLists.txt  writers.cpp  writers.hpp
src/logic/: CMakeLists.txt  GraphImageWriter.cpp  GraphImageWriter.hpp  Image.cpp  Image.hpp  P1.cpp  P1.hpp  P2.cpp  P2.hpp  P3.cpp  P3.hpp  P4.cpp  P4.hpp  P5.cpp  P5.hpp  P6.cpp  P6.hpp  Productions.cpp  Productions.hpp
src/logic/Interpolation/: CMakeLists.txt  InterpolationHelper.cpp  InterpolationHelper.hpp  RectangularInterpolation.cpp  RectangularInterpolation.hpp
src/logic/Rectangular/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P5.hpp  Rectangular.cpp  Rectangular.hpp
src/logic/Rivara/: CMakeLists.txt  P0.cpp  P0.hpp  P1.cpp  P1.hpp  Rivara.cpp  Rivara.hpp  RivaraAttributes.cpp  RivaraAttributes.hpp  RivaraCachedGraph.cpp  RivaraCachedGraph.hpp  RivaraP0.cpp  RivaraP0.hpp  RivaraP1.cpp  RivaraP1.hpp  RivaraP2.cpp  RivaraP2.hpp  RivaraP3.cpp  RivaraP3.hpp  RivaraP4.cpp  RivaraP4.hpp  RivaraP5.cpp  RivaraP5.hpp  RivaraP6.cpp  RivaraP6.hpp  RivaraP7.cpp  RivaraP7.hpp  RivaraProductions.hpp  RivaraUtils.hpp
src/models/: Array2D.cpp  Array2D.hpp  Attributes.hpp  CMakeLists.txt  CachedGraph.cpp  CachedGraph.hpp  Edge.cpp  Edge.hpp  GraphessorConstants.hpp  GraphessorImage.cpp  GraphessorImage.hpp  Image.cpp  Image.hpp  ImageMagnifier.cpp  ImageMagnifier.hpp  IntegralConstants.hpp  MyGraph.hpp  PbiHelper.cpp  PbiHelper.hpp  Pixel.cpp  Pixel.hpp  Production.hpp  VertexBase.cpp  VertexBase.hpp  mygraph.cpp  mygraph.hpp
test/logic/: Array2Dtest.cpp  CMakeLists.txt  Image_test.cpp  InterpolationTests.cpp  PbiHelperTest.cpp  Production_test.cpp  Rivara_test.cpp
test/logic/RivaraTests/: CMakeLists.txt  RivaraProduction0test.cpp  RivaraProduction1test.cpp  RivaraProduction2test.cpp  RivaraProduction3test.cpp  RivaraProduction4test.cpp  RivaraProduction5test.cpp  RivaraProduction6test.cpp
