cmake_minimum_required(VERSION 3.0.0)

add_library(LogicTest Image_test.cpp Production_test.cpp)
target_link_libraries(LogicTest RivaraTest)
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/test/logic/RivaraTests")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/test/logic")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/googletest-src/googletest/include")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/src/logic")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/src/logic/Rectangular")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/src/logic/Rivara")
target_include_directories(LogicTest PUBLIC "${PROJECT_SOURCE_DIR}/src/models")
file(COPY "test_files" DESTINATION "${PROJECT_SOURCE_DIR}/${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
